--- a/src/flaskov/templates/base.html
+++ b/src/flaskov/templates/base.html
@@ -1,6 +1,17 @@
 <!doctype html>
-<title>My Application</title>
 
+<head>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/base.css') }}"/>
+</head>
+
+<div class="topnav">
+  <a class="logo" href="{{ url_for('main.index') }}">
+    <img src="{{ url_for('static',filename='images/logo.png') }}" width=100 height=60/>
+  </a>
+  <a class="nav-item" href="{{ url_for('main.about') }}"> About </a>
+  <a class="nav-item" href="{{ url_for('auth.login') }}"> Login </a>
+  <a class="nav-item" href="{{ url_for('auth.register') }}"> Register </a>
+</div>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class=flashes>
