--- a/src/flaskov/templates/base.html
+++ b/src/flaskov/templates/base.html
@@ -4,23 +4,31 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/base.css') }}"/>
 </head>
 
-<div class="topnav">
-  <a class="logo" href="{{ url_for('main.index') }}">
-    <img src="{{ url_for('static',filename='images/logo.png') }}" width=100 height=60/>
-  </a>
-  <a class="nav-item" href="{{ url_for('main.about') }}"> About </a>
-  <a class="nav-item" href="{{ url_for('auth.login') }}"> Login </a>
-  <a class="nav-item" href="{{ url_for('auth.register') }}"> Register </a>
+<body background="{{ url_for('static',filename='images/background.png') }}"></body>
+<!-- BEGIN HEADER ====================================================-->
+<header>
+  <div class="header-container">
+    <a class="logo" href="{{ url_for('main.index') }}">
+      <img src="{{ url_for('static',filename='images/logo.png') }}" height=60/>
+    </a>
+    <h3> Generate Psuedo Sentences </h3>
+  </div>
+</header>
+<!-- BEGIN BODY ======================================================-->
+<div class="main">
+  <div class="main-content">
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+    {% block body %}
+    {% endblock %}
+  </div>
 </div>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
 
-{% block body %}
-{% endblock %}
+</body>
