--- a/src/flaskov/templates/index.html
+++ b/src/flaskov/templates/index.html
@@ -1,5 +1,43 @@
 {% extends "base.html" %}
 
 {% block body %}
-<a href="{{ url_for('main.about') }}"> index </a>
+    <a href="{{ url_for('main.about') }}"> index </a>
+    {% from "_formhelpers.html" import render_field %}
+    <form method="POST">
+        {{ form.csrf_token }}
+        <dl>
+            {{ render_field(form.name) }}
+            {{ render_field(form.corpus) }}
+            {{ render_field(form.order) }}
+            {{ render_field(form.submit) }}
+        </dl>
+    </form>
+
+{% endblock %}
+{% block script %}
+<script>
+    $(document).ready(function() {
+        // Ajax request to `generate_model` endpoint
+        $('form').submit(function (e) {
+            var url = "{{ url_for('markov.generate_model') }}";
+            $.ajax({
+                type: "POST",
+                url: url,
+                data: $('form').serialize(), 
+                success: function (data) {
+                    console.log(data)  
+                }
+            });
+            e.preventDefault(); 
+
+        // Inject CSRF token into AJAX request.
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value() }}")
+                }
+            }
+        })
+    })});
+</script>
 {% endblock %}
