finished bare minimum project

--- a/src/flaskov/templates/base.html
+++ b/src/flaskov/templates/base.html
@@ -17,7 +17,7 @@
 </header>
 <!-- BEGIN BODY ======================================================-->
 <div id="main" class="main">
-  <div class="main-content">
+  <div class="main-content row">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
