--- a/src/flaskov/static/styles/base.css
+++ b/src/flaskov/static/styles/base.css
@@ -1,12 +1,32 @@
 /* General Styling **************************/
 
-html,body
-{
+html,body{
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 40px;
+}
+
+h3 {
+    color: white;
+    margin:20px;
+}
+
+dt {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+dd {
+    width: 100%;
+    margin: 0;
+    min-height: 50px;
 }
 
 /* Header Styles *****************************/
@@ -15,7 +35,7 @@ body header {
     background-color: #724559;
     overflow: hidden;
     height: 80px;
-    min-height: 65px;
+    min-height: 80px;
     position: sticky;
     top: 0;
     left: 0;
@@ -25,6 +45,8 @@ body header {
 }
 
 .header-container{
+    float: left;
+    width:100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-begin;
@@ -54,6 +76,7 @@ body header {
 }
 
 .logo {
+    overflow:hidden;
     float: left;
     margin: 10px;
 }
@@ -61,7 +84,7 @@ body header {
 /* Body Styles *****************************/
 
 .main {
-    background-color: #E4D8B4;
+    background-color: #FFEAB4;
     overflow: hidden;
     border-radius: 20px;
     max-width: 1300px;
@@ -82,14 +105,68 @@ body header {
     padding: 50px;
 }
 
-/* Other Elements ***************************/
-
-h1 {
-    font-weight: boldest;
-    font-size: 40px;
+.row {
+  display: flex; /* equal height of the children */
+    flex-direction: row;
 }
 
-h3 {
-    color: white;
-    margin:20px;
+.col {
+  flex: 1; /* additionally, equal width */
+  padding: 1em;
+    flex-direction: row;
+}
+
+.model-panel {
+    visibility: hidden;
+}
+
+/* Form Elements ***************************/
+
+textarea#corpus {
+  width: 100%;
+  min-height: 250px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+  margin-bottom: 12px;
+}
+
+input#name, input#name, input#submit{
+    min-height: 28px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+input[type=text]:focus, textarea#corpus:focus {
+  border: 2px solid #724559;
+  transition: border 0.2s ease-in-out;
+}
+
+ul#order {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+input[type=radio] {
+    display:none; 
+}
+
+input[type=radio]:checked + label { 
+    background-image: none;
+    border: solid 2px #724559;
+    transition: background 0.4s ease-in-out;
+}
+
+input[type=radio] + label {
+    border-radius: 4px;
+    display:inline-block;
+    padding: 10px 90px;;
+    background-color: #e7e7e7;
+    margin: 5px;
 }
