--- a/src/flaskov/templates/index.html
+++ b/src/flaskov/templates/index.html
@@ -1,43 +1,69 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <a href="{{ url_for('main.about') }}"> index </a>
+<div class="generate-form-container col">
     {% from "_formhelpers.html" import render_field %}
     <form method="POST">
         {{ form.csrf_token }}
         <dl>
             {{ render_field(form.name) }}
-            {{ render_field(form.corpus) }}
             {{ render_field(form.order) }}
+            {{ render_field(form.corpus) }}
             {{ render_field(form.submit) }}
         </dl>
     </form>
+</div>
+
+<div class="col model-panel">
+    <h1 class="model-name"></h1>
+    <h1 class="model-size"></h1>
+    <input id="generate-sentence" type="submit" value="Generate Sentence">
+    <h1 class="sentence"></h1>
+</div>
 
 {% endblock %}
 {% block script %}
 <script>
-    $(document).ready(function() {
-        // Ajax request to `generate_model` endpoint
-        $('form').submit(function (e) {
-            var url = "{{ url_for('markov.generate_model') }}";
-            $.ajax({
-                type: "POST",
-                url: url,
-                data: $('form').serialize(), 
-                success: function (data) {
-                    console.log(data)  
-                }
-            });
-            e.preventDefault(); 
-
-        // Inject CSRF token into AJAX request.
-        $.ajaxSetup({
-            beforeSend: function(xhr, settings) {
-                if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value() }}")
-                }
+$(document).ready(function() {
+    // Ajax request to `generate_model` endpoint
+    $('form').submit(function (e) {
+        var url = "{{ url_for('markov.generate_model') }}";
+        $.ajax({
+            type: "POST",
+            url: url,
+            data: $('form').serialize(),
+            success: function (data) {
+                console.log(data);
+                $(".model-name").text(data.model_name);
+                $(".model-size").text(data.model_size);
+                $(".model-panel").css("visibility", "visible");
             }
-        })
-    })});
+        });
+        e.preventDefault(); 
+
+    // Ajax request to `generate_sentence` endpoint
+    $('#generate-sentence').click(function (e) {
+        var url = "{{ url_for('markov.generate_sentence') }}";
+        var name = $(".model-name").text();
+        $.ajax({
+            type: "POST",
+            url: url,
+            data: {model_name: JSON.stringify(name)}, 
+            success: function (data) {
+                $(".sentence").text(data.sentence);
+            }
+        });
+        e.preventDefault();
+    })
+
+    // Inject CSRF token into AJAX request.
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token }}")
+            }
+        }
+    })
+})});
 </script>
 {% endblock %}
