--- a/src/flaskov/templates/index.html
+++ b/src/flaskov/templates/index.html
@@ -51,6 +51,7 @@ $(document).ready(function() {
             data: {model_name: JSON.stringify(name)}, 
             success: function (data) {
                 $(".sentence").text(data.sentence);
+                $(".sentence").css()
             }
         });
         e.preventDefault();
@@ -60,7 +61,11 @@ $(document).ready(function() {
     $.ajaxSetup({
         beforeSend: function(xhr, settings) {
             if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token }}")
+                {% if form.csrf_token %}
+                xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value }}")
+                {% else %}
+                xhr.setRequestHeader("X-CSRFToken", "nothing")
+                {% endif %}
             }
         }
     })
