--- a/src/flaskov/templates/index.html
+++ b/src/flaskov/templates/index.html
@@ -15,9 +15,12 @@
 </div>
 
 <div class="col model-panel">
-    <h1 class="model-name"></h1>
-    <h1 class="model-size"></h1>
-    <input id="generate-sentence" type="submit" value="Generate Sentence">
+    <h1 id="model-name" class="model-name">Test String</h1>
+    <h1 id="model-size" class="model-size"></h1>
+    <form method="POST">
+        {{ form.csrf_token }}
+        <input id="generate-sentence" type="submit" value="Generate Sentence">
+    </form>
     <h1 class="sentence"></h1>
 </div>
 
@@ -25,6 +28,7 @@
 {% block script %}
 <script>
 $(document).ready(function() {
+
     // Ajax request to `generate_model` endpoint
     $('form').submit(function (e) {
         var url = "{{ url_for('markov.generate_model') }}";
@@ -32,6 +36,15 @@ $(document).ready(function() {
             type: "POST",
             url: url,
             data: $('form').serialize(),
+            beforeSend: function (xhr, settings){
+                if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                    {% if form.csrf_token %}
+                    xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value }}");
+                    {% else %}
+                    xhr.setRequestHeader("X-CSRFToken", "nothing");
+                    {% endif %}
+                }
+            },
             success: function (data) {
                 console.log(data);
                 $(".model-name").text(data.model_name);
@@ -40,35 +53,31 @@ $(document).ready(function() {
             }
         });
         e.preventDefault(); 
+    });
 
     // Ajax request to `generate_sentence` endpoint
     $('#generate-sentence').click(function (e) {
         var url = "{{ url_for('markov.generate_sentence') }}";
         var name = $(".model-name").text();
         $.ajax({
-            type: "POST",
+            type: "GET",
             url: url,
-            data: {model_name: JSON.stringify(name)}, 
-            success: function (data) {
+            data: {model_name: JSON.stringify(name)},
+            beforeSend: function (xhr, settings){
+                if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                    {% if form.csrf_token %}
+                    xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value }}");
+                    {% else %}
+                    xhr.setRequestHeader("X-CSRFToken", "nothing");
+                    {% endif %}
+                }
+            },
+            success: function(data) {
                 $(".sentence").text(data.sentence);
-                $(".sentence").css()
             }
         });
         e.preventDefault();
     })
-
-    // Inject CSRF token into AJAX request.
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-                {% if form.csrf_token %}
-                xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value }}")
-                {% else %}
-                xhr.setRequestHeader("X-CSRFToken", "nothing")
-                {% endif %}
-            }
-        }
-    })
-})});
+});
 </script>
 {% endblock %}
